--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "react": "^19.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-iot": "^0.0.3",
