--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.1",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.1.3",
     "axios": "^1.8.4",
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
@@ -26,6 +29,7 @@
     "react-qr-code": "^2.0.15",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.3",
     "zustand": "^5.0.3"
   },
