--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^11.6.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.0.0",
